Set z-index of fixed navigation to be infront of body.

--- a/assets/custom-theme.scss
+++ b/assets/custom-theme.scss
@@ -63,6 +63,7 @@ body {
   top: 240px;
   left: 40px;
   color: $nav-color;
+  z-index: 1;
 
   a {
 
